src/styles/tailwind.css
@import 'tailwindcss';
@import './fonts.css';
@import './prose.css';

@theme {
  --font-impact: 'Atkinson', 'sans-serif';
  --font-primary: 'NotoSans', 'sans-serif';

  --color-primary: #213b4a;
  --color-primary-700: rgba(33, 59, 74, 0.9);
  --color-primary-600: rgba(33, 59, 74, 0.8);
  --color-primary-500: rgba(33, 59, 74, 0.7);
  --color-primary-400: rgba(33, 59, 74, 0.6);
  --color-primary-light: rgba(33, 59, 74, 0.4);
  --color-primary-lighter: rgba(33, 59, 74, 0.1);
  --color-secondary: #90c6be;
  --color-secondary-light: rgba(144, 198, 190, 0.4);
  --color-secondary-lighter: rgba(144, 198, 190, 0.1);

  --inset-shadow-md: inset 0 2px 3px rgba(0, 0, 0, 0.25);
  --skew-x: 20deg;
}

@variant dark (&:is(.dark *));

@utility wrapper {
  @apply max-w-[900px] mx-auto px-4 sm:px-6 lg:px-8;
}

@utility wrapper-alt {
  @apply max-w-[900px] mx-auto px-4 md:px-0;
}

@utility wrapper-no-padding {
  @apply max-w-[900px] mx-auto px-0;
}

@utility anchor {
  padding-top: 100px;
  margin-top: -100px;
  /* display: block;
  position: relative;
  // visibility: hidden; */
}

@utility link {
  @apply underline decoration-4 decoration-primary-light dark:decoration-secondary-light hover:decoration-primary-lighter dark:hover:decoration-secondary-lighter transition-all duration-200 ease-in-out;
}

@utility btn-bottom-shadow-* {
  box-shadow: var(--color-primary) 0 calc(--value(integer) * 1px) 0 0;
}

@utility btn-bottom-shadow-dark-* {
  box-shadow: rgba(255, 255, 255, 0.25) 0 calc(--value(integer) * 1px) 0 0;
}

@utility btn {
  @apply rounded-[10px] border-0 px-3 py-2 text-[15px] tracking-wide transition-all duration-300 ease-in-out cursor-pointer no-underline font-sans shadow-md
    bg-secondary text-primary dark:text-primary btn-bottom-shadow-7 dark:btn-bottom-shadow-dark-7 hover:btn-bottom-shadow-0 dark:hover:btn-bottom-shadow-dark-0 active:btn-bottom-shadow-0 dark:active:btn-bottom-shadow-dark-0;
}

@utility btn-outlined {
  @apply btn border-solid border-1 border-primary;
}

@utility btn-img {
  @apply btn p-0 inline-block overflow-hidden hover:translate-y-0;

  video,
  img {
    @apply w-full rounded-[10px] transition-all duration-200 ease-in-out;
  }

  &:hover video,
  &:hover img {
    @apply scale-110 rotate-[2deg];
  }
}

@utility btn-img-child {
  @apply has-[.btn-img]:hover:[*>img]:scale-105 has-[btn-img]:hover:[*>img]:rotate-[2deg];
}

@utility parallelogram {
  @apply -skew-x-[var(--skew-x)];
  span {
    @apply block skew-x-[var(--skew-x)];
  }
}

@utility background-diagonal {
  background-color: var(--background-diagonal-bg, #fff);
  background-size: 10px 10px;
  background-image: repeating-linear-gradient(
    45deg,
    var(--background-diagonal-lines, --color-primary-500) 0,
    var(--background-diagonal-lines, --color-primary-500) 1px,
    var(--background-diagonal-bg, --color-primary-400) 0,
    var(--background-diagonal-bg, --color-primary) 50%
  );
}

@utility background-paper {
  background-color: var(--background-paper-bg);
  background-image:
    linear-gradient(var(--background-paper-lines) 2px, transparent 2px),
    linear-gradient(90deg, var(--background-paper-lines) 2px, transparent 2px),
    linear-gradient(var(--background-paper-lines) 1px, transparent 1px),
    linear-gradient(90deg, var(--background-paper-lines) 1px, var(--background-paper-bg) 1px);
  background-size:
    50px 50px,
    50px 50px,
    10px 10px,
    10px 10px;
  background-position:
    -2px -2px,
    -2px -2px,
    -1px -1px,
    -1px -1px;
}

@layer components {
  .pagination-link {
    @apply py-1 px-3 hover:bg-primary hover:text-secondary dark:hover:bg-secondary dark:hover:text-primary transition-all duration-200 ease-in-out inline-block [--skew-x:10deg] parallelogram rounded-md;
  }

  .background-diagonal-primary {
    @apply [--background-diagonal-bg:var(--color-primary)]
    [--background-diagonal-lines:var(--color-primary-lighter)]
    dark:[--background-diagonal-bg:#1a2d38]
    dark:[--background-diagonal-lines:#90c6be33]
    background-diagonal;
  }

  .background-diagonal-secondary {
    @apply [--background-diagonal-bg:var(--color-secondary)]
    [--background-diagonal-lines:var(--color-primary-lighter)]
    dark:[--background-diagonal-bg:#2a4a5a]
    dark:[--background-diagonal-lines:#90c6be44]
    background-diagonal;
  }

  .background-paper-secondary {
    @apply [--background-paper-bg:var(--color-secondary)]
    [--background-paper-lines:var(--color-secondary-lighter)]
    dark:[--background-paper-bg:#2a4a5a]
    dark:[--background-paper-lines:#90c6be33]
    background-paper;
  }

  .pagefind-ui-dark {
    .pagefind-ui__drawer {
      --pagefind-ui-text: #fff;
      color: var(--pagefind-ui-text) !important;
    }
  }

  .pagefind-ui-floating {
    position: relative;
    .pagefind-ui__drawer {
      @apply absolute! top-11! left-0! right-0! z-50! bg-primary/50! backdrop-blur-sm! rounded-lg! shadow-lg! p-4! pt-0! max-h-[500px]! overflow-y-auto!;
      --pagefind-ui-text: #fff;
      color: var(--pagefind-ui-text) !important;
    }
  }
}

@layer base {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-impact text-primary dark:text-secondary leading-none font-bold tracking-tight;
  }
  html {
    @apply font-primary text-[#404040] dark:text-gray-200;
  }

  body {
    @apply font-primary text-[#404040] dark:text-gray-200 
    bg-[#f3f4f6] dark:bg-primary text-lg 
    [--background-paper-bg:#f3f4f6]
    [--background-paper-lines:#8BC2B933]
    dark:[--background-paper-bg:#213b4a]
    dark:[--background-paper-lines:#90c6be22]
    background-paper;
    background-attachment: fixed;

    /* background-diagonal-[color-secondary__color-primary-lighter] */
    /* @include mixings.background-paper(var(--bg), var(--primary-color-10)); */
  }
}

